--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 *{ box-sizing:border-box; }
 html, body{
   margin:0; padding:0; height:100%;
-  overflow:hidden;
-  overscroll-behavior-y:none;
+  overflow:auto;
+  overscroll-behavior-y:auto;
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   -webkit-text-size-adjust:100%;
