--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -713,54 +713,54 @@ if(btnF){
     btnF.classList.add("bad");
   }
 
-  // ✅ SI DÉJÀ VALIDÉ : clic = note (et on sort, on n'écrase plus onclick)
-  if(isValidated){
-    btnF.onclick = ()=>{
-      const d = fmtDMAny(dateVal) || "—";
+  // ✅ SI DÉJÀ VALIDÉ : clic = note (lecture seule)
+if (isValidated) {
+  btnF.onclick = () => {
+    const d = fmtDMAny(dateVal) || "—";
 
-      if(st === "done"){
-        openModal(`
-          <h3>${mois} — Fait</h3>
-          <div class="field" style="text-align:left;">
-            Date : <b>${d}</b>
-          </div>
-          <div class="row">
-            <button class="btn2 primary" id="mOk">OK</button>
-          </div>
-        `);
-      }else{
-        openModal(`
-          <h3>${mois} — Non fait</h3>
-          <div class="field" style="text-align:left;">
-            Date : <b>${d}</b>
-          </div>
-          <div class="field" style="text-align:left;white-space:pre-wrap;line-height:1.35;">
-            Justificatif :<br><b>${(justif || "—")}</b>
-          </div>
-          <div class="row">
-            <button class="btn2 primary" id="mOk">OK</button>
-          </div>
-        `);
-      }
+    if (st === "done") {
+      openModal(`
+        <h3>${mois} — Fait</h3>
+        <div class="field" style="text-align:left;">
+          Date : <b>${d}</b>
+        </div>
+        <div class="row">
+          <button class="btn2 primary" id="mOk">OK</button>
+        </div>
+      `);
       document.getElementById("mOk").onclick = closeModal;
-    };
+    } else {
+      openModal(`
+        <h3>${mois} — Non fait</h3>
+        <div class="field" style="text-align:left;">
+          Date : <b>${d}</b>
+        </div>
+        <div class="field" style="text-align:left;white-space:pre-wrap;line-height:1.35;">
+          Justificatif :<br><b>${(justif || "—")}</b>
+        </div>
+        <div class="row">
+          <button class="btn2 primary" id="mOk">OK</button>
+        </div>
+      `);
+      document.getElementById("mOk").onclick = closeModal;
+    }
+  };
 
-    // visuel “lecture seule” MAIS cliquable
-    btnF.disabled = false;
-    btnF.classList.add("disabled");
-    return; // ✅ IMPORTANT : empêche d’écraser onclick juste après
-  }
+  // visuel "lecture seule" MAIS cliquable
+  btnF.disabled = false;
+  btnF.classList.add("disabled");
+}
+else if (isRef) {
+  // ✅ PAS VALIDÉ + référent : peut valider
+  btnF.onclick = () => onFaitClick(tr);
+}
+else {
+  // ✅ PAS VALIDÉ + non référent : rien
+  btnF.onclick = null;
+  btnF.disabled = true;
+  btnF.classList.add("disabled");
+}
 
-  // ✅ PAS VALIDÉ :
-  // - référent peut cliquer pour valider
-  // - non référent : rien
-  if(isRef){
-    btnF.onclick = ()=> onFaitClick(tr);
-  }else{
-    btnF.onclick = null;
-    btnF.disabled = true;
-    btnF.classList.add("disabled");
-  }
 }
 
   }
